@@ -89,3 +89,18 @@ info.character: found C10H22(liq); other available states are liq, liq
   high pressure (DEW model; Robinson et al., 2021)
 
 - Combine solubility() and solubilities() into single function (for CHNOSZ 1.5.0).
+
+[20210306]
+
+- Remove 'bases2' argument from mosaic() (old backward compatibility)
+
+- Widen margins in demo/AkDi.R
+
+[20210309]
+
+- Add argument to OBIGT() to exclude data files for organic species.
+
+[20210312]
+
+- Don't use z.T = NA to trigger AkDi model (makes the more common use case of
+  just adding a simple aqueous species more tricky).
